# AXOS-Variable-Configurator

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  dev-requirements.txt  process_csv.py  pyproject.toml  requirements.txt  setup_config_repo.py  streamlit_app.py  validate_outputs.py
.github/workflows/: ci.yml
axos_var_configurator/: __main__.py  baseline.py  cli.py  config.py  csvio.py  edit.py  exporter.py  gitutil.py  units.py
tests/: conftest.py  test_process_csv.py
