[project]
name = "axos-variable-configurator"
version = "0.1.0"
description = "CSV processor for AXOS variable configs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1,<3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

